NTU-738 Modernize the test frameworks