@@ -34,6 +34,9 @@
     <jakarta-packages-version>4.0.2</jakarta-packages-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <log4j2-version>2.25.3</log4j2-version>
+    <junit-jupiter.version>5.10.2</junit-jupiter.version>
+    <mockito.version>5.21.0</mockito.version>
+    <xmlunit.version>2.11.0</xmlunit.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -106,21 +109,21 @@
       <version>${lmax_disruptor-version}</version>
     </dependency>
     <dependency>
-      <groupId>org.junit.vintage</groupId>
-      <artifactId>junit-vintage-engine</artifactId>
-      <version>5.8.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest</artifactId>
-      <version>2.2</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit-jupiter.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>4.5.1</version>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -131,8 +134,14 @@
     </dependency>
     <dependency>
       <groupId>org.xmlunit</groupId>
-      <artifactId>xmlunit-legacy</artifactId>
-      <version>2.9.1</version>
+      <artifactId>xmlunit-assertj</artifactId>
+      <version>${xmlunit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.xmlunit</groupId>
+      <artifactId>xmlunit-core</artifactId>
+      <version>${xmlunit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -141,6 +150,9 @@
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>${surefire.plugin.version}</version>
+        <configuration>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -153,6 +165,9 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire.plugin.version}</version>
+        <configuration>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -163,6 +178,9 @@
         <plugins>
           <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
+            </configuration>
           </plugin>
           <plugin>
             <groupId>org.jacoco</groupId>
